{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 69,
  "lineage": "b559c9d6-f284-ce9e-380e-cfebccf7596e",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/loadBalancers/loadbalancer/frontendIPConfigurations/PublicIPAddress",
                "inbound_nat_rules": [
                  "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/loadBalancers/loadbalancer/inboundNatRules/http"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/publicIPAddresses/publicip"
              }
            ],
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/loadBalancers/loadbalancer",
            "location": "canadacentral",
            "name": "loadbalancer",
            "resource_group_name": "n01525374-assignmemt2-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_public_ip.publicip",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "linux_backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/loadBalancers/loadbalancer/backendAddressPools/backend-pool",
            "loadbalancer_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/loadBalancers/loadbalancer",
            "name": "backend-pool"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.loadbalancer",
            "module.loadbalancer.azurerm_public_ip.publicip",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 80,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/loadBalancers/loadbalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/loadBalancers/loadbalancer/inboundNatRules/http",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/loadBalancers/loadbalancer",
            "name": "http",
            "protocol": "Tcp",
            "resource_group_name": "n01525374-assignmemt2-RG"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.loadbalancer",
            "module.loadbalancer.azurerm_public_ip.publicip",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/loadBalancers/loadbalancer/probes/http",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/loadBalancers/loadbalancer",
            "name": "http",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "module.loadbalancer.azurerm_lb.loadbalancer",
            "module.loadbalancer.azurerm_public_ip.publicip",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "loadbalancer",
            "fqdn": "loadbalancer.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/publicIPAddresses/publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.151.223.61",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "publicip",
            "resource_group_name": "n01525374-assignmemt2-RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/networkSecurityGroups/nsg1",
            "location": "canadacentral",
            "name": "nsg1",
            "resource_group_name": "n01525374-assignmemt2-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/networkSecurityGroups/nsg2",
            "location": "canadacentral",
            "name": "nsg2",
            "resource_group_name": "n01525374-assignmemt2-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_rdp",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/virtualNetworks/vnet-lab/subnets/subnet1_name",
            "name": "subnet1_name",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "n01525374-assignmemt2-RG",
            "virtual_network_name": "vnet-lab"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/virtualNetworks/vnet-lab/subnets/subnet2_name",
            "name": "subnet2_name",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "n01525374-assignmemt2-RG",
            "virtual_network_name": "vnet-lab"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "51ff0541-7185-4293-821d-887ccbcbf9b9",
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/virtualNetworks/vnet-lab",
            "location": "canadacentral",
            "name": "vnet-lab",
            "resource_group_name": "n01525374-assignmemt2-RG",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/virtualNetworks/vnet-lab/subnets/subnet1_name",
                "name": "subnet1_name"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/virtualNetworks/vnet-lab/subnets/subnet2_name",
                "name": "subnet2_name"
              }
            ],
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "Name": "akinloye.aremu",
              "Project": "Automation Project – Assignment 1"
            }
          },
          "dependencies": [
            "module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.vmlinux",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt1-RG/providers/Microsoft.Network/networkInterfaces/5374-u-vm-0-nic",
            "internal_domain_name_suffix": "iec54umfogjufaq3rb4mxs5zxb.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "5374-u-vm-ipconfig1-1",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt1-RG/providers/Microsoft.Network/publicIPAddresses/5374-u-vm-0-pip",
                "subnet_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/virtualNetworks/vnet-lab/subnets/subnet1_name"
              }
            ],
            "location": "canadacentral",
            "mac_address": "60-45-BD-5B-A6-01",
            "name": "5374-u-vm-0-nic",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "n01525374-assignmemt1-RG",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "Name": "akinloye.aremu",
              "Project": "Automation Project – Assignment 1"
            },
            "virtual_machine_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Compute/virtualMachines/5374-u-vm-1"
          },
          "dependencies": [
            "module.network.azurerm_subnet.subnet_1",
            "module.network.azurerm_virtual_network.vnet",
            "module.rgroup.azurerm_resource_group.rgroup",
            "module.vmlinux.azurerm_public_ip.vm-pip",
            "module.vmlinux.module.rgroup.azurerm_resource_group.rgroup"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt1-RG/providers/Microsoft.Network/networkInterfaces/5374-u-vm-1-nic",
            "internal_domain_name_suffix": "iec54umfogjufaq3rb4mxs5zxb.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "5374-u-vm-ipconfig1-2",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt1-RG/providers/Microsoft.Network/publicIPAddresses/5374-u-vm-1-pip",
                "subnet_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/virtualNetworks/vnet-lab/subnets/subnet1_name"
              }
            ],
            "location": "canadacentral",
            "mac_address": "00-22-48-3B-BE-AD",
            "name": "5374-u-vm-1-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "n01525374-assignmemt1-RG",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "Name": "akinloye.aremu",
              "Project": "Automation Project – Assignment 1"
            },
            "virtual_machine_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Compute/virtualMachines/5374-u-vm-2"
          },
          "dependencies": [
            "module.network.azurerm_subnet.subnet_1",
            "module.network.azurerm_virtual_network.vnet",
            "module.rgroup.azurerm_resource_group.rgroup",
            "module.vmlinux.azurerm_public_ip.vm-pip",
            "module.vmlinux.module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.vmlinux",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "centos-vm-0",
            "fqdn": "centos-vm-0.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt1-RG/providers/Microsoft.Network/publicIPAddresses/5374-u-vm-0-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.104.17.248",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "5374-u-vm-0-pip",
            "resource_group_name": "n01525374-assignmemt1-RG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "Name": "akinloye.aremu",
              "Project": "Automation Project – Assignment 1"
            }
          },
          "dependencies": [
            "module.vmlinux.module.rgroup.azurerm_resource_group.rgroup"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "centos-vm-1",
            "fqdn": "centos-vm-1.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt1-RG/providers/Microsoft.Network/publicIPAddresses/5374-u-vm-1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.104.75.60",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "5374-u-vm-1-pip",
            "resource_group_name": "n01525374-assignmemt1-RG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "Name": "akinloye.aremu",
              "Project": "Automation Project – Assignment 1"
            }
          },
          "dependencies": [
            "module.vmlinux.module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.vmwindows",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/networkInterfaces/5374-w-vm1-nic",
            "internal_domain_name_suffix": "iec54umfogjufaq3rb4mxs5zxb.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "5374-w-vm1-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt1-RG/providers/Microsoft.Network/publicIPAddresses/5374-w-vm1-pip",
                "subnet_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt2-RG/providers/Microsoft.Network/virtualNetworks/vnet-lab/subnets/subnet1_name"
              }
            ],
            "location": "canadacentral",
            "mac_address": "60-45-BD-5F-85-63",
            "name": "5374-w-vm1-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "n01525374-assignmemt2-RG",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "Name": "akinloye.aremu",
              "Project": "Automation Project – Assignment 1"
            },
            "virtual_machine_id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt1-RG/providers/Microsoft.Compute/virtualMachines/5374-w-vm1-win"
          },
          "dependencies": [
            "module.network.azurerm_subnet.subnet_1",
            "module.network.azurerm_virtual_network.vnet",
            "module.rgroup.azurerm_resource_group.rgroup",
            "module.vmwindows.azurerm_public_ip.pip_windows",
            "module.vmwindows.module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    },
    {
      "module": "module.vmwindows",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/879725c7-5f63-41db-b9ad-35150bd23e04/resourceGroups/n01525374-assignmemt1-RG/providers/Microsoft.Network/publicIPAddresses/5374-w-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.151.218.18",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "5374-w-vm1-pip",
            "resource_group_name": "n01525374-assignmemt1-RG",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Lab",
              "ExpirationDate": "2023-06-30",
              "Name": "akinloye.aremu",
              "Project": "Automation Project – Assignment 1"
            }
          },
          "dependencies": [
            "module.vmwindows.module.rgroup.azurerm_resource_group.rgroup"
          ]
        }
      ]
    }
  ]
}